2005-11-25  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* testsuite/libjava.jacks/jacks.xfail: Remove
	non-jls-argument-expansion-13 and add
	non-jls-argument-expansion-error-1 in response to the @file support
	patch in the main GCC driver.

2005-11-24  Bryce McKinlay  <mckinlay@redhat.com>

	* sysdep/ia64-frame.h: Removed.
	* sysdep/ia64.c: Removed.
	* sysdep/dwarf2-backtrace.cc: Removed.
	* configure.ac: Remove references to HAVE_BACKTRACE and
	SUPPLY_BACKTRACE.
	* Makefile.am: Remove SUPPLY_BACKTRACE support.
	* configure: Rebuilt.
	* Makefile.in: Rebuilt.

2005-11-24  Bryce McKinlay  <mckinlay@redhat.com>

	* gij.cc (nonstandard_opts_help): Add entry for -Xss.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	Imported GNU Classpath gcj-import-20051117.
	* gnu/java/net/protocol/file/Connection.java: Removed, fully merged.
	* sources.am: Regenerated.
	* Makefile.in: Likewise.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/file/Handler.java: Removed, fully merged now.
	* java/net/ServerSocket.java: Likewise.
	* sources.am: Regenerated.
	* Makefile.in: Regenerated.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	Fixes bug #24006
	* java/net/ServerSocket.java (implAccept): Set Socket.bound to true.

2005-11-17  Tom Tromey  <tromey@redhat.com>

	* java/net/ServerSocket.java (accept): Use correct security manager
	call.

2005-11-17  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/ServerSocket.java
	(bound): Removed.
	(local): New field.
	(bind): Cache local socket address.
	(getInetAddress, getLocalPort, getLocalSocketAddress, isBound):
	Use cached local socket address.
	(close): bound field was removed.

2005-11-17  Tom Tromey  <tromey@redhat.com>

	* java/net/URLConnection.java (setDoInput): Javadoc fix.
	(setDoOutput): Likewise.
	(setContentHandlerFactory): Likewise.
	(setFileNameMap): Likewise.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	* java/net/URLClassloader.java (addURLs): Add comment about jboss.
